1st working iteration - start & stop recording buttons, simple html table output

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-webpack-boilerplate",
+  "name": "speech-to-table",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Parth Khatri <p.khatri21@gmail.com>",
