--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "@xenova/transformers": "^2.4.3",
+    "normalize.css": "^8.0.1",
+    "wavefile": "^11.0.0"
   }
 }
