--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "lib": ["DOM", "ES2021.String"]
+    "lib": ["DOM", "ES2021.String"],
   }
 }
