--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -31,16 +31,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-
     - name: Build
       run: |
         npm install
         npx webpack
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
 
   deploy:
     environment:
