--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -39,8 +39,10 @@ jobs:
       run: |
         npm install
         npx webpack
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
+    - uses: actions/upload-artifact@master
+      with:
+        name: page
+        path: build
 
   deploy:
     environment:
@@ -49,6 +51,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/download-artifact@master
+        with:
+          name: page
+          path: .
+      - uses: actions/configure-pages@v1
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: .
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
